Avoid content overflow

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -281,6 +281,9 @@ ul.dropdown-items {
     font-size: inherit;
     line-height: inherit;
   }
+  dd {
+    word-break: break-all;
+  }
 }
 
 .help-content a[href]:hover,
